<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/voice_header">

        <SwitchPreference
            android:key="gender"
            android:title="@string/gender_title"
            android:summary="@string/gender_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/display_header">

        <ListPreference
            android:summary="@string/font_summary"
            android:defaultValue="sans-serif-medium"
            android:entries="@array/text_font"
            android:entryValues="@array/text_font"
            android:key="font"
            android:title="@string/font_title" />
        <ListPreference
            android:defaultValue="20"
            android:entries="@array/text_size"
            android:entryValues="@array/text_size"
            android:summary="@string/text_size_summary"
            android:key="font_size"
            android:title="@string/text_size_title" />
    </PreferenceCategory>

</PreferenceScreen>